--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,9 @@ a{
   position: absolute;
   top: 0;
   left: 220px;
-  padding-left: 30px;
+  padding: 20px 0 0 20px;
+  width: calc(100% - 220px);
+  height: 100%;
+  min-height: 100vh;
+  background-color: #fafafa;
 }
