--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
-a{
+a {
   text-decoration: none;
   color: black;
 }
-.app{
+.app {
   width: 100%;
   height: 100vh;
   position: relative;
 }
 
-.app__content{
+.app__content {
   position: absolute;
   top: 0;
   left: 220px;
